PTFrontend/test/compiler_semantic_tests/single_file/inst/TemplateRecursiveInst_fail.javapt
template SimpleTemplate {
    inst SimpleTemplate; // error
    
    class A {
        int k;

        A getA() {
            return new A();
        }
    }
}
